--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           });
 
           // Redirect ke halaman login
-          window.location.href = `login.html?accessKey=${user.accessKey}`;
+          window.location.href = `login.html?accessKey=WANZ-INFINITY2025`;
         } else {
           attempts++;
           errorDiv.style.display = "block";
