--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="box">
-        <form autocomplete="off">
+        <form autocomplete="off" onsubmit="login(event)">
             <img src="ptero.png" alt="Pterodactyl Panel" class="img"> <h1>Pterodactyl</h1>
             <div class="inputBox">
                 <input type="text" id="username" required="required">
@@ -20,14 +20,16 @@
                 <span>Password</span>
                 <i></i>
             </div>
-            <input type="submit" value="Login" onclick="login()">
+            <input type="submit" value="Login" onclick="login(event)">
         </form>
     </div>
 </body>
 <script>
     let attempts = 0;
 
-    async function login() {
+    async function login(event) {
+      event.preventDefault();
+        
       const username = document.getElementById("username").value.trim();
       const password = document.getElementById("password").value.trim();
       const errorDiv = document.getElementById("error");
