--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </form>
   </div>
   <!-- ✅ Error message div -->
-      <div id="error" style="display:none; color:red; text-align:center; margin-top:10px;">
+      <div id="error" class="errorMsg">
         Username atau password salah!
       </div>
 
