--- a/login.html
+++ b/login.html
@@ -154,7 +154,7 @@
 
             
 
-            const WEBSITE_ACCESS_KEY = "WANZ-INFINITY2025";
+            const WEBSITE_ACCESS_KEY = "zaroffc12";
             const BASE_URL_PTERODACTYL_API = "https://restapi.mat.web.id/api/pterodactyl/create?username=&ram=&disk=&cpu=&eggid=&nestid=&loc=&domain=&ptla=&ptlc=";
 
             const PACKAGES = {
