--- a/login.html
+++ b/login.html
@@ -208,7 +208,7 @@
             async function checkServerStatus() {
                 try {
                     // Cek server public
-                    const publicCheck = await fetch(`https://panel/zaroffc.xyz}`, { method: 'HEAD', mode: 'no-cors' });
+                    const publicCheck = await fetch(`https://panel.zaroffc.xyz}`, { method: 'HEAD', mode: 'no-cors' });
                     server1Status.textContent = "AKTIF";
                     server1Status.className = "server-status-value status-active";
                 } catch (e) {
